2018-10-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdump.c (Print_Name): Report `head' revision and timestamps.

2018-10-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdump.c (Print_Charmaps): Rework without \b.

2018-10-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_String_Draw): Avoid endless loop.
	* src/ftstring.c (main): Don't disable sbits.

2018-10-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (Render_Waterfall): Color the size marks.
	(event_color_change): Manipulate the warning color.

2018-10-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftdump] New compact charmap coverage format.

	* src/ftdump.c (Print_Charmaps): Implement it.
	(main): Change corresponding options.
	* src/ftdump.1, src/ftdump.c (usage): Document it.

2018-10-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c: Remove unused fields and function.

2018-10-01  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/x11/grx11.c (gr_x11_surface_init): Clean up window creation.

2018-09-29  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (Render_Waterfall): Mark the status size.

2018-09-29  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/grfill.c (grFillHLine): Fix cropping.
	(grFillVLine): Refactor in line with `grFillHLine'.

2018-09-26  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (Process_Event, event_help): Implement flushing.

2018-09-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c: Polished.

2018-09-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Implement text carpeting mode.

	* src/ftstring.c (main): Add text-carpeting mode implemented in...
	(Render_Text): ... this new function.
	(Render_CmpKern, Render_Waterfall): Minor updates and refactoring.

2018-09-13  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Teach `FT_String_Draw' to recycle glyphs.

	* src/ftcommon.h (FTDemo_String_Context): New fields for offset glyph